<resources>
    <string name="app_name">My Checkin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Đăng nhập</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Số điện thoại</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="title_add_employee">THÊM NHÂN VIÊN MỚI</string>
    <string name="title_fix_employee">SỬA THÔNG TIN NHÂN VIÊN </string>
    <string name="name_field">Họ tên</string>
    <string name="birth_day">Ngày Sinh</string>
    <string name="select_birthday">Chọn ngày sinh</string>
    <string name="email_field">Email</string>
    <string name="phone_number_field">Số điện thoại</string>
    <string name="position_filed">Chức vụ</string>
    <string name="password_field">Mật khẩu</string>
    <string name="confirm_pw_feild">Xác nhận mật khẩu</string>
    <string name="change_pw_feild">THAY ĐỔI MẬT KHẨU</string>
    <string name="search_feild">Tìm kiếm nhân viên</string>
    <string name="title_manage_user">QUẢN LÝ NHÂN VIÊN</string>
    <string name="title_list_employee">Danh sách nhân viên</string>
    <string name="title_manage_checkin">QUẢN LÝ CHẤM CÔNG</string>
    <string name="title_change_location">THAY ĐỔI THÔNG TIN CÔNG TY</string>
    <string name="title_history_checkin">LỊCH SỬ CHẤM CÔNG</string>
    <string name="text_history_checkin_offdate">Ngày làm việc trùng với ngày nghỉ</string>
    <string name="title_update_user">Thông tin cá nhân </string>
    <string name="txt_password">Nhập mật khẩu hiện tại </string>
    <string name="txt_password_new">Nhập mật khẩu mới </string>
    <string name="txt_password_conf">Xác nhận mật khẩu </string>
    <string name="title_detai_manage_checkin">Danh sách chi tiết </string>
</resources>