<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/txtchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/change_pw_feild"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mật khẩu hiện tại"
                android:textSize="16dp"
                android:textColor="@color/black"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_radius_10dp">
            <EditText
                android:id="@+id/txtpass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:inputType="textPassword"
                android:layout_marginLeft="10dp"
                android:hint="@string/txt_password"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mật khẩu mới"
                android:textSize="16dp"
                android:textColor="@color/black"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_radius_10dp">

            <EditText
                android:id="@+id/txt_pass_new"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:hint="@string/txt_password_new"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Xác nhận mật khẩu"
                android:textSize="16dp"
                android:textColor="@color/black"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_radius_10dp">
            <EditText
                android:id="@+id/txt_pass_conf"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:layout_marginLeft="10dp"
                android:hint="@string/txt_password_conf"
                android:textColor="@color/black"
                android:textSize="16dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Thay đổi mật khẩu"
                android:textAllCaps="true"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:background="#CD853F"
                android:textFontWeight="700">

            </Button>
        </RelativeLayout>


    </LinearLayout>
</layout>