<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".detail_NV">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/ic_back"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/baseline_arrow_back_24" />

                    <TextView
                        android:id="@+id/txt_editNv"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/title_fix_employee"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tvname_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/name_field"
                        android:textColor="@color/black"
                        android:textFontWeight="400"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@id/tvname_edit"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_radius_10dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"

                        android:textColor="@color/black"
                        android:textSize="16dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvNgaysinh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/birth_day"
                        android:textColor="@color/black"
                        android:textFontWeight="400"
                        android:textSize="16sp"
                        android:layout_marginTop="20dp"/>

                    <TextView
                        android:id="@+id/edtNgaysinh"
                        android:layout_width="320dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/tvNgaysinh"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_radius_10dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/tvNgaysinh"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/edtNgaysinh"
                        android:background="@drawable/baseline_calendar_month_24"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvMail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/email_field"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textFontWeight="400"/>

                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@id/tvMail"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_radius_disable"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:textColor="@color/black"
                        android:textSize="16dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/phone_number_field"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textFontWeight="400"/>

                    <EditText
                        android:id="@+id/edtSdt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@id/tvPhone"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_radius_10dp"
                        android:paddingLeft="20dp"
                        android:textColor="@color/black"
                        android:textSize="16dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvPossi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:text="@string/position_filed"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textFontWeight="400"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvPossi"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_radius_10dp">

                        <Spinner
                            android:id="@+id/spinner1"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:spinnerMode="dropdown" />
                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp">

                    <Button
                        android:id="@+id/btnUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="CẬP NHẬT THÔNG TIN"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textFontWeight="700"
                        android:background="#CD853F"/>
                </RelativeLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>